--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node minimalDistance.ts",
+    "check": "npm run start -- wordone wordtwo",
+    "lint": "eslint . --fix",
+    "format": "prettier . --write",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch  ./index.test.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "@types/jest": "^29.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^9.11.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "typescript-eslint": "^8.8.0"
   }
 }
